# desafio_meli

./: README.md  main.py  pyproject.toml  questao_2.ipynb  questao_dois.ipynb  questao_um.ipynb
models/: device_failure_model_executive_20251006_100036.json  device_failure_model_metrics_20251006_100036.json  device_failure_model_xgboost_20251006_100036.pkl
utils/: alert_utils.py  analytics_utils.py  business_utils.py  data_utils.py  feature_utils.py  model_utils.py  pipeline_utils.py
